<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDriver"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/prof_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:layout_marginTop="80sp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/email_admin"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:gravity="left"
            android:text="@string/email_admin"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tlp_cs"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:gravity="left"
            android:text="@string/hp_admin"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/versi"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="20sp"
            android:gravity="left"
            android:text="@string/versi"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>