<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingTop="20dp"
    tools:context="com.skripsi.herdiesadimarta.userapp.activity.DaftarActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_error"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorAccent"
            android:text="@string/no_text" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="70dp"
            android:textColorHint="@color/colorMild">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:hint="@string/hint_nama"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@color/colorMild" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorMild">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@color/colorMild" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorMild">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@color/colorMild" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_register" />
    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/textMoveLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_already_member"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:textColor="@android:color/black" />/>
</RelativeLayout>
